<?xml version="1.0"?>

<package format="2">

  <name>example_action</name>

  <version>0.0.1</version>

  <description>A minimal example of using the actionlib in ROS.</description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>rospy</exec_depend>

</package>
