<?xml version="1.0"?>
<package format="2">
  <name>example_launch</name>
  <version>0.0.0</version>
  <description>A fairly complex example of using parameters with launch files.</description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

</package>
