<?xml version="1.0"?>

<package format="2">

  <name>example_service</name>

  <version>0.0.1</version>

  <description>A minimal example of using a service in ROS.</description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
