<?xml version="1.0"?>

<package format="2">

  <name>example_web_interface</name>

  <version>0.0.1</version>

  <description> A minimal example of how to create a web interface for ROS. </description>

  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>

  <license>MIT</license>

  <exec_depend>rosbridge_server</exec_depend>

</package>
